added swagatam here

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 ---
+<br><br>
 <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+  <header class="post-header" style="padding-left: 170px; padding-right: 170px">
+    <h1 class="post-title" >{{ page.title | escape }}</h1>
   </header>
 
-  <div class="post-content">
+  <div class="post-content" style="padding-left: 170px; padding-right: 170px">
     {{ content }}
   </div>
 
