--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -154,13 +154,12 @@ layout: default
 
   <div class="hero-section" style="width: 100%; height: 44.39vw; background-image: url('images/bgg1.png'); background-size: contain; background-repeat: no-repeat; background-position: center top;">
     <div class="content" style="padding-left: 170px;">
-      <h2 style="color: white;"><b> SWAGATAM TO IIT ROPAR </b></h2>
+      <h2 style="color: white;"><b> Joy Of Computing Workshop</b></h2>
       <p style="color: white;">
-        Welcome to IIT Ropar, where new students are greeted with open arms <br> and an array of orientation
-        programs designed to help them integrate <br> seamlessly into campus life and feel at home in no time.
+        description
       </p>
       
-      <a href="https://drive.google.com/file/d/1Iq39k0rplGGp_Yc4FM37wGkj0QKrDReW/view" class="btn">Campus Video</a>    
+      <a href="https://drive.google.com/file/d/1Iq39k0rplGGp_Yc4FM37wGkj0QKrDReW/view" class="btn">Register Now</a>    
     </div>
   </div>
   <br>
