--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -156,7 +156,7 @@ layout: default
     <div class="content" style="padding-left: 170px;">
       <h2 style="color: white;"><b> Joy Of Computing Workshop</b></h2>
       <p style="color: white;">
-        description
+        Dive into the fascinating world of computer science through fun and engaging sessions over 2 days. <br>Our distinguished professors and talented students from *IIT Ropar* <br>will guide you through this enriching journey.
       </p>
       
       <a href="https://drive.google.com/file/d/1Iq39k0rplGGp_Yc4FM37wGkj0QKrDReW/view" class="btn">Register Now</a>    
