--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -159,7 +159,7 @@ layout: default
         Dive into the fascinating world of computer science through fun and engaging sessions over 2 days. <br>Our distinguished professors and talented students from *IIT Ropar* <br>will guide you through this enriching journey.
       </p>
       
-      <a href="https://drive.google.com/file/d/1Iq39k0rplGGp_Yc4FM37wGkj0QKrDReW/view" class="btn">Register Now</a>    
+      <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>    
     </div>
   </div>
   <br>
