--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     }
   </style>
   <body>
-    <!--{%- include header.html -%}-->
+    {%- include header.html -%}
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
