--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -152,7 +152,7 @@ layout: default
   {%- endif -%}-->
 
 
-  <div class="hero-section" style="width: 100%; height: 44.39vw; background-image: url('images/bgg1.png'); background-size: contain; background-repeat: no-repeat; background-position: center top;">
+  <div class="hero-section" style="width: 100%; height: 44.39vw; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center top;">
     <div class="content" style="padding-left: 170px;">
       <h2 style="color: white;"><b> Joy Of Computing Workshop</b></h2>
       <p style="color: white;">
