--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -152,8 +152,8 @@ layout: default
   {%- endif -%}-->
 
 
-  <div class="hero-section" style="width: 100%; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
-    <div class="content" style="padding-left: 20px;">
+  <div class="hero-section" style="width: 100%; height:0.5vw; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
+    <div class="content" style="padding-left: 40px;">
       <h2 style="color: black;"><b> Joy Of Computing Workshop</b></h2>
       <p style="color: black;">
         Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from *IIT Ropar* will guide you through <br>this enriching journey.
