--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -152,7 +152,7 @@ layout: default
   {%- endif -%}-->
 
 
-  <div class="hero-section" style="width: 100%; height:0.5vw; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
+  <div class="hero-section" style="width: 100%; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
     <div class="content" style="padding-left: 40px;">
       <h2 style="color: black;"><b> Joy Of Computing Workshop</b></h2>
       <p style="color: black;">
