--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -154,9 +154,9 @@ layout: default
 
   <div class="hero-section" style="width: 100%; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
     <div class="content" style="padding-left: 40px;">
-      <h2 style="color: black;"><b> Joy Of Computing Workshop</b></h2>
+      <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2>
       <p style="color: black;">
-        Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from *IIT Ropar* will guide you through <br>this enriching journey.
+        Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from <b>IIT Ropar</b> will guide you through <br>this enriching journey.
       </p>
       
       <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>    
