--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -158,8 +158,13 @@ layout: default
       <p style="color: black;">
         Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from <b>IIT Ropar</b> will guide you through <br>this enriching journey.
       </p>
+
+      <p>
+        Join Our WhatsApp Group
+      </p>
+      <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>    
       
-      <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>    
+      <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
     </div>
   </div>
   <br>
