--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -159,8 +159,8 @@ layout: default
         Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from <b>IIT Ropar</b> will guide you through <br>this enriching journey.
       </p>
 
-      <p>
-        Join Our WhatsApp Group
+      <p style="color: black;">
+        Join Our WhatsApp Group here
       </p>
       <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>    
       
