--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,17 @@
 <header class="site-header" role="banner" style="padding: 0 20px;">
-  <div class="wrapper" style="position: relative; display: flex; align-items: center; justify-content: space-between;">
-    <div style="display: flex; align-items: center;">
-      <!-- Site Title -->
-      <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="text-decoration: none; color: black; padding: 0 20px;">{{ site.title | escape }}</a>
-
-      <!-- Logos -->
-      <div class="site-logos" style="display: flex; align-items: center; padding: 0 20px;">
-        <img src="images/Logos.jpg" alt="Logo 1" style="height: 30px; margin-right: 10px;">
-      </div>
-    </div>
+  <div class="wrapper" style="position: relative;">
+    {%- assign default_paths = site.pages | map: "path" -%}
+    {%- assign page_paths = site.header_pages | default: default_paths -%}
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="text-decoration: none; color: black; padding: 0 20px;">{{ site.title | escape }}</a>
 
     {%- if page_paths -%}
-      <!-- Menu Icon -->
-      <div style="display: flex; align-items: center;">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" style="display: none;"/>
-        <label for="nav-trigger" style="cursor: pointer; padding: 0 20px;">
-          <span class="menu-icon" style="display: block; width: 30px; height: 3px; background-color: #333; margin: 6px 0;"></span>
-          <span class="menu-icon" style="display: block; width: 30px; height: 3px; background-color: #333; margin: 6px 0;"></span>
-          <span class="menu-icon" style="display: block; width: 30px; height: 3px; background-color: #333; margin: 6px 0;"></span>
-        </label>
-      </div>
+      <input type="checkbox" id="nav-trigger" class="nav-trigger" style="display: none;"/>
+      <label for="nav-trigger" style="position: absolute; top: 20px; right: 20px; cursor: pointer; padding: 0 20px;">
+        <span class="menu-icon" style="display: block; width: 30px; height: 3px; background-color: #333; margin: 6px 0;"></span>
+        <span class="menu-icon" style="display: block; width: 30px; height: 3px; background-color: #333; margin: 6px 0;"></span>
+        <span class="menu-icon" style="display: block; width: 30px; height: 3px; background-color: #333; margin: 6px 0;"></span>
+      </label>
 
-      <!-- Navigation Menu -->
       <nav class="site-nav" style="position: absolute; top: 60px; right: 20px; background-color: #fff; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); border-radius: 5px; display: none; padding: 10px; transition: all 0.3s ease;">
         <div class="trigger">
           {%- for path in page_paths -%}
