--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -157,14 +157,17 @@ layout: default
       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2>
       <p style="color: black;">
         Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from <b>IIT Ropar</b> will guide you through <br>this enriching journey.
-      </p>
+      </p> 
+
+      <b>Dates: 22nd and 23rd July</b>
+
+      <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
 
       <p style="color: black;">
         Join Our WhatsApp Group here
       </p>
-      <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>    
+      <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>
       
-      <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
     </div>
   </div>
   <br>
