--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,10 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="text-decoration: none; color: black; padding: 0 20px;">{{ site.title | escape }}</a>
 
+  <img src="images/Logos.jpg" alt="Logo 1" style="height: 40px; margin-right: 10px;">
+
+
+
     {%- if page_paths -%}
       <input type="checkbox" id="nav-trigger" class="nav-trigger" style="display: none;"/>
       <label for="nav-trigger" style="position: absolute; top: 20px; right: 20px; cursor: pointer; padding: 0 20px;">
