--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="text-decoration: none; color: black; padding: 0 20px;">{{ site.title | escape }}</a>
 
-  <img src="joc/images/Logos.jpg" alt="Logo 1" style="height: 50px; margin-right: 10px; margin-top: 10px;">
+  <img src="/images/Logos.jpg" alt="Logo 1" style="height: 50px; margin-right: 10px; margin-top: 10px;">
 
 
 
