--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -160,7 +160,7 @@ layout: default
       </p> 
       <br>
 
-      <b>Dates: 22nd and 23rd July</b>
+      <p style="color: black;">Dates: 22nd and 23rd July</p>
       <br>
 
       <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
