--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -159,7 +159,7 @@ layout: default
         Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from <b>IIT Ropar</b> will guide you through <br>this enriching journey.
       </p> 
 
-      <p style="color: black;">Dates: 22nd and 23rd July</p>
+      <p style="color: black;"><b>Dates: 22nd and 23rd July</b></p>
 
       <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
 
