--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="text-decoration: none; color: black; padding: 0 20px;">{{ site.title | escape }}</a>
 
   <img src="Logos.jpg" alt="Logo 1" style="height: 40px; margin-right: 10px; margin-top: 10px;">
+  <img src="Logo2.jpg" alt="Logo 1" style="height: 40px; margin-right: 10px; margin-top: 10px;">
 
     
     {%- if page_paths -%}
