--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="text-decoration: none; color: black; padding: 0 20px;">{{ site.title | escape }}</a>
 
   <img src="Logos.jpg" alt="" style="height: 40px; margin-right: 10px; margin-top: 10px;">
-  <img src="images/logo1.jpeg" alt="Logo" style="height: 40px; margin-right: 10px; margin-top: 10px;">
+<!--   <img src="images/logo1.jpeg" alt="Logo" style="height: 40px; margin-right: 10px; margin-top: 10px;"> -->
 
     
     {%- if page_paths -%}
