--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -156,7 +156,7 @@ layout: default
     <div class="content" style="padding-left: 40px;">
       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2>
       <p style="color: black;">
-        Dive into the fascinating world of computer science through fun and <br>engaging sessions over 2 days. Our distinguished professors <br>and talented students from <b>IIT Ropar</b> will guide you through <br>this enriching journey.
+        Embark on an exhilarating journey into the captivating realm <br>of Computing with our vibrant and engaging sessions spanning two days. <br>Our esteemed professors and brilliant students from IIT Ropar will <br>be your guides, illuminating your path through this enriching and <br>unforgettable experience.
       </p> 
 
       <p style="color: black;"><b>Dates: 22nd and 23rd July</b></p>
