--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -162,11 +162,12 @@ layout: default
       <p style="color: black;"><b>Dates: 22nd and 23rd July</b></p>
 
       <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
+      <br>
 
       <p style="color: black;">
-        Join Our WhatsApp Group here
+        Join Our WhatsApp Group here:
+        <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>
       </p>
-      <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>
       
     </div>
   </div>
