--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,9 @@ layout: default
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swagatam</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Roboto Medium', sans-serif; /* Use Roboto font or any other preferred font */
@@ -155,7 +158,7 @@ layout: default
   <div class="hero-section" style="width: 100%; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
     <div class="content" style="padding-left: 40px;">
 <!--       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2> -->
-      <h2 style="color: black; font-family: 'Arial', sans-serif; font-size: 26px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
+      <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 26px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
 
       <p style="color: black;">
         Embark on an exhilarating journey into the captivating realm <br>of Computing with our vibrant and engaging sessions spanning two days. <br>Our esteemed professors and brilliant students from IIT Ropar will <br>be your guides, illuminating your path through this enriching and <br>unforgettable experience.
