--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -158,9 +158,9 @@ layout: default
   <div class="hero-section" style="width: 100%; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
     <div class="content" style="padding-left: 40px;">
 <!--       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2> -->
-      <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 26px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
+      <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 23px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
 
-      <p style="color: black;">
+      <p style="color: black; font-family: 'Montserrat', sans-serif;">
         Embark on an exhilarating journey into the captivating realm <br>of Computing with our vibrant and engaging sessions spanning two days. <br>Our esteemed professors and brilliant students from IIT Ropar will <br>be your guides, illuminating your path through this enriching and <br>unforgettable experience.
       </p> 
 
