--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -149,7 +149,7 @@ layout: default
   </style>
 </head>
 <body>
-<div class="home">
+<div class="home" style="background-color: #ffcc99">
   <!--{%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}  </h1>
   {%- endif -%}-->
