--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -177,7 +177,7 @@ layout: default
     </div>
   </div>
   <br>
-  <div class="content" style="padding-left: 170px; padding-right: 170px ;">
+  <div class="content" style="padding-left: 0.1*vw; padding-right: 0.1*vw ;">
   {{ content }}
   </div>
 
