--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -168,8 +168,8 @@ layout: default
   {%- endif -%}-->
 
 
-  <div class="hero-section parent" style="width: 100%; background-color: red; background-size: contain; background-repeat: no-repeat; background-position: right top;">
-    <div class="content child" style="padding-left: 40px;">
+  <div class="hero-section parent" style="width: 100%; height: 100vh; display: flex; width: 100%; background-color: red; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
+    <div class="content child" style="padding-left: 40px;flex: 1; background-color: #ffcc99; box-sizing: border-box;">
 <!--       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2> -->
       <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 23px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
 
@@ -188,7 +188,7 @@ layout: default
       </p>
       
     </div>
-    <div class="" style="width: 100%;  background-image: url('images/joc image.jpg');"></div>
+    <div class="" style="flex: 1; background-color: #99ccff; padding: 10px; box-sizing: border-box; background-image: url('images/joc image.jpg');"></div>
     </div>
   <br>
   <div class="content" style="padding-left: 0.1*vw; padding-right: 0.1*vw ;">
