--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -162,13 +162,13 @@ layout: default
   </style>
 </head>
 <body>
-<div class="home" style="background-color: blue ">
+<div class="home" style="">
   <!--{%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}  </h1>
   {%- endif -%}-->
 
 
-  <div class="hero-section parent" style="width: 100%; height: 100vh; display: flex; width: 100%; background-color: red; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
+  <div class="hero-section parent" style="width: 100%; height: 100vh; display: flex; width: 100%; background-size: contain; background-repeat: no-repeat; background-position: right top;">
     <div class="content child" style="padding-left: 40px;flex: 1; background-color: #ffcc99; box-sizing: border-box;">
 <!--       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2> -->
       <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 23px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
