--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -131,7 +131,7 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="content">
+  <div class="content" style="padding-left:10vw; padding-right: 10vw">
     {{content}}
   </div>
 </body>
