--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -155,7 +155,7 @@ layout: default
   {%- endif -%}-->
 
 
-  <div class="hero-section" style="width: 100%; height: 50vw; background-color: #ffcc99; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
+  <div class="hero-section" style="width: 100%; background-color: #ffcc99; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
     <div class="content" style="padding-left: 40px;">
 <!--       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2> -->
       <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 23px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
