--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
     <h1 class="post-title" >{{ page.title | escape }}</h1>
   </header>
 
-  <div class="post-content" style="padding-left: 170px; padding-right: 170px">
+  <div class="post-content" >
     {{ content }}
   </div>
 
