--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <br><br>
 <article class="post">
 
-  <header class="post-header" style="padding-left: 170px; padding-right: 170px">
+  <header class="post-header">
     <h1 class="post-title" >{{ page.title | escape }}</h1>
   </header>
 
