--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,11 +4,11 @@ layout: default
 <br><br>
 <article class="post">
 
-  <header class="post-header">
+  <header class="post-header" style="padding-left: 10vw; padding-right: 10vw">
     <h1 class="post-title" >{{ page.title | escape }}</h1>
   </header>
 
-  <div class="post-content" >
+  <div class="post-content" style="padding-left: 10vw; padding-right: 10vw">
     {{ content }}
   </div>
 
