--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" role="banner" style="padding: 0 20px;">
+<header class="site-header" role="banner" style="padding: 5vw;">
   <div class="wrapper" style="position: relative;">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
