--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -179,7 +179,7 @@ layout: default
           <p>
             Embark on an exhilarating journey into the captivating realm of Computing with our vibrant and engaging sessions spanning two days. Our esteemed professors and brilliant students from IIT Ropar will be your guides, illuminating your path through this enriching and unforgettable experience.
           </p>
-          <p><b>Dates: 22nd and 23rd July</b></p>
+          <p><b>Dates: 22nd and 23rd July (<a href="/schedule/">Schedule</a>)</b></p>
           <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
           <p>
             
