--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -177,9 +177,9 @@ layout: default
         <div class="hero-text">
           <h1><b>Joy Of Computing Online Workshop</b></h1>
           <p>
-            Embark on an exhilarating journey into the captivating realm of Computing with our vibrant and engaging sessions spanning two days. Our esteemed professors and brilliant students from IIT Ropar will be your guides, illuminating your path through this enriching and unforgettable experience.
+            Embark on an exhilarating journey into the captivating realm of Computing with our vibrant and engaging sessions spanning two days. Our esteemed professors and brilliant students will be your guides, illuminating your path through this enriching and unforgettable experience.
           </p>
-          <p><b>Dates: 22nd and 23rd July (<a href="/joc/schedule/">Schedule</a>)</b></p>
+          <p><b>Dates: 14th September,2024 and 15th September,2024 (<a href="/joc/schedule/">Schedule</a>)</b></p>
           <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
           <p>
             
